--- a/store/templates/shop/addcategory.html
+++ b/store/templates/shop/addcategory.html
@@ -212,7 +212,7 @@
             <button class="btn btn-success me-2" type="button" data-bs-toggle="offcanvas" data-bs-target="#sidebar" aria-controls="sidebar">
                 ☰ Menu
             </button>
-            <a class="navbar-brand" href="./">Admin Dashboard</a>
+            <a class="navbar-brand" href="./">Admin Hub</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
